# stratcraft

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE-LightGBM-MIT.txt  README.md  SECURITY.md  SIL-OFL-1.1.txt  STRATCRAFT-COMMERCIAL.txt  THIRD_PARTY_NOTICES.md  jest.config.js  package-lock.json  package.json  tsconfig.json
engine/: .gitignore  Cargo.toml  README.md
engine/src/: alpaca.rs  app_url.rs  backtest_api_client.rs  backtester.rs  cache.rs  candle_utils.rs  config.rs  context.rs  data_context.rs  database.rs  engine.rs  indicators.rs  lib.rs  main.rs  models.rs  optimizer.rs  optimizer_status.rs  param_utils.rs  performance.rs  retry.rs  signals.rs  strategy.rs  strategy_utils.rs  trading_rules.rs
engine/src/commands/: backtest_accounts.rs  backtest_active.rs  balance.rs  export_market_data.rs  generate_signals.rs  market_data_snapshot.rs  mod.rs  optimize.rs  plan_operations.rs  reconcile_trades.rs  train_lightgbm.rs  verify.rs
engine/src/strategies/: adx.rs  atr.rs  buy_and_hold.rs  lightgbm.rs  macd.rs  psar.rs  rsi.rs  weighted_momentum.rs  williams_r.rs
engine/tests/: lightgbm_template.rs  pipeline.rs
engine/tests/snapshots/: backtest_pipeline.txt
engine/tests/snapshots/trades/: adx.txt  atr.txt  lightgbm.txt  macd.txt  psar.txt  rsi.txt  weighted_momentum.txt  williams_r.txt
engine/tests/snapshots_allow_short/: backtest_pipeline.txt
engine/tests/snapshots_allow_short/trades/: adx.txt  atr.txt  buy_and_hold.txt  macd.txt  psar.txt  rsi.txt  weighted_momentum.txt
scripts/: DEPLOYMENT.md  copy-assets.js  (+6 more)
(+144 files in other folders)
