[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async utilities
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.7"
dashmap = "5.4"
crossbeam-channel = "0.5"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"

# HTTP client for API calls (use Rustls for TLS to avoid Windows Schannel issues)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "blocking"] }

# Mathematical operations
statrs = "0.16"

# Additional dependencies
num_cpus = "1.0"
fastrand = "2.0"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
# Binary serialization for market data snapshots
bincode = "1.3"

[dev-dependencies]
dotenvy = "0.15"
